bindings/csharp/CrispASR/NativeMethods.cs


        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_result_word_n_alts(IntPtr result, int iSeg, int iWord);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_session_result_word_alt_text(IntPtr result, int iSeg, int iWord, int iAlt);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern float crispasr_session_result_word_alt_p(IntPtr result, int iSeg, int iWord, int iAlt);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void crispasr_session_result_free(IntPtr result);

        // ---- Language detection ----
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_detect_language(
            IntPtr s, float[] pcm, int nSamples,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string lidModelPath,
            int method, byte[] outLang, int outLangCap, float[] outProb);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_detect_language_pcm(
            float[] samples, int nSamples, int method,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string modelPath,
            int nThreads, int useGpu, int gpuDevice, int flashAttn,
            byte[] outLang, int outLangCap, float[] outProb);

        // ---- Alignment ----
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_align_words_abi(
            [MarshalAs(UnmanagedType.LPUTF8Str)] string alignerModel,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string transcript,
            float[] samples, int nSamples, long tOffsetCs, int nThreads);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_align_result_n_words(IntPtr result);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_align_result_word_text(IntPtr result, int i);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern long crispasr_align_result_word_t0(IntPtr result, int i);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern long crispasr_align_result_word_t1(IntPtr result, int i);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void crispasr_align_result_free(IntPtr result);

        // ---- VAD ----
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_vad_segments(
            [MarshalAs(UnmanagedType.LPUTF8Str)] string vadModelPath,
            float[] pcm, int nSamples, int sampleRate,
            float threshold, int minSpeechMs, int minSilenceMs,
            int nThreads, int useGpu, IntPtr[] outSpans);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void crispasr_vad_free(IntPtr spans);

        // ---- Streaming ----
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_session_stream_open(
            IntPtr s, int nThreads, int stepMs, int lengthMs,
            int keepMs, [MarshalAs(UnmanagedType.LPUTF8Str)] string language, int translate);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_stream_feed(IntPtr stream, float[] pcm, int nSamples);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_stream_get_text(
            IntPtr stream, byte[] outText, int outCap,
            out double outT0, out double outT1, out long outCounter);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_stream_flush(IntPtr stream);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void crispasr_stream_close(IntPtr stream);

        // ---- Kokoro lang helpers ----
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_kokoro_resolve_model_for_lang_abi(
            [MarshalAs(UnmanagedType.LPUTF8Str)] string modelPath,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string lang,
            byte[] outPath, int outPathLen);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_kokoro_resolve_fallback_voice_abi(
            [MarshalAs(UnmanagedType.LPUTF8Str)] string modelPath,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string lang,
            byte[] outPath, int outPathLen,
            byte[] outPicked, int outPickedLen);

        // ---- Backend detection ----
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_detect_backend_from_gguf(
            [MarshalAs(UnmanagedType.LPUTF8Str)] string path,
            byte[] outName, int outCap);

        // ---- Audio enhancement ----
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_enhance_audio_rnnoise(
            float[] inPcm, int nSamples, float[] outPcm, int outCap);

        // ---- Speaker embedding (TitaNet) ----
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_titanet_init(
            [MarshalAs(UnmanagedType.LPUTF8Str)] string modelPath, int nThreads);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void crispasr_titanet_free(IntPtr ctx);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_titanet_embed(IntPtr ctx, float[] pcm16k, int nSamples, float[] outEmb);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern float crispasr_titanet_cosine_sim(float[] a, float[] b, int dim);

        // ---- Speaker database ----
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_speaker_db_load(
            [MarshalAs(UnmanagedType.LPUTF8Str)] string dirPath);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void crispasr_speaker_db_free(IntPtr db);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_speaker_db_count(IntPtr db);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern float crispasr_speaker_db_match(
            IntPtr db, float[] embedding, int dim, float threshold,
            byte[] outName, int outCap);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_speaker_db_enroll(
            [MarshalAs(UnmanagedType.LPUTF8Str)] string dirPath,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
            float[] embedding, int dim);

        // ---- Text translation ----
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_session_translate_text(
            IntPtr s,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string text,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string srcLang,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string tgtLang,
            int maxTokens);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void crispasr_session_translate_text_free(IntPtr text);

        // ---- Registry + cache ----
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_registry_lookup_abi(
            [MarshalAs(UnmanagedType.LPUTF8Str)] string backend,
            byte[] outFilename, int filenameCap,
            byte[] outUrl, int urlCap,
            byte[] outSize, int sizeCap);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_cache_ensure_file_abi(
            [MarshalAs(UnmanagedType.LPUTF8Str)] string filename,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string url,
            int quiet,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string? cacheDirOverride,
            byte[] outBuf, int outCap);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_cache_dir_abi(
            [MarshalAs(UnmanagedType.LPUTF8Str)] string? cacheDirOverride,
            byte[] outBuf, int outCap);

        // ---- Helpers ----
        internal static string NullTerminated(byte[] buf)
        {
            int n = 0;
            while (n < buf.Length && buf[n] != 0) n++;
            return Encoding.UTF8.GetString(buf, 0, n);
        }

        internal static string? PtrToUtf8(IntPtr ptr)
        {
            if (ptr == IntPtr.Zero) return null;
            return Marshal.PtrToStringUTF8(ptr);
        }
    }
}
